2004-08-01  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* text3.C (dispatch): remove special handling of button 4 and 5,
	it is now taken care of in the frontend code.

2004-07-25  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* Spacing.h: add <string> (STLPort compile fix)

2004-08-02  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* LaTeXFeatures.C: (jurabib) \RequirePackage -> \usepackage

2004-07-25  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyxlex_pimpl.C (compare_tags): chagne return type of operator()
	to bool.

	* converter.C (showMessage): inherit from unary_function, make
	operator() const.

	* buffer.C (writeFile): initialize retval

	* InsetList.h: rename private variable list to list_
	* InsetList.[Ch]: adjust accordingly.

2004-07-24  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* text3.C, text2.C, text.C, tabular.C, paragraph_funcs.C, paragraph.C:
	* lyxlength.C, lyxgluelength.C, lyxfunc.C, lyxfont.C, lyxfind.C:
	* kbmap.C, funcrequest.C, factory.C, cursor.C, counters.C:
	* bufferview_funcs.C, bufferparams.C, buffer.C, Spacing.C:
	* ParagraphParameters.C, LaTeXFeatures.C: replace
	"support/std_sstream.h" with <sstream>

2004-07-23  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyxserver.C (startPipe): use this (pointer) not *this (reference)
	* lyxsocket.C (LyXServerSocket): ditto
	(serverCallback): ditto

2004-07-23  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* LaTeXFeatures.C: check release date when loading jurabib.

2004-07-22  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyxserver.C (startPipe): call register_socket_callback
	(endPipe): call unregister_socket_callback

2004-07-21  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* lyxsocket.C (LyXServerSocket): reduce max outstanding clients to 3
	(LyXServerSocket): register the callback
	(LyXServerSocket): unregister the callback
	(fd): delete function
	(serverCallback): improve error checking and setup the callbacks.
	(dataCallback): change arg to fd.