@@ -1,3 +1,10 @@
+2004-08-04  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* outputparams.h: add new members intitle and lang.
+
+	* paragraph.C (simpleTeXOnePar): initialize rp.lang and
+	rp.intitle. Actually use rp in call to simpleTeXSpecialChars
+
 2004-08-01  Lars Gullik Bjonnes  <larsbj@gullik.net>
 
 	* text3.C (dispatch): remove special handling of button 4 and 5,
